--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,15 @@
+# Database
 spring.datasource.url = jdbc:mysql://${MYSQL_HOST:localhost}:3306/${MYSQL_DB:jdigital}
 spring.datasource.username=${MYSQL_USERNAME}
 spring.datasource.password=${MYSQL_PASSWORD}
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+# API server
+server.servlet.contextPath=/api
+server.error.include-message=always
+server.port=${API_PORT:8080}
+
+# Default user registration
+user.default_job=employee
+user.default_role=workman
+user.default_company=IT895623147
