Add basic data to initialize the DB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@
 spring.datasource.url = jdbc:mysql://${MYSQL_HOST:localhost}:3306/${MYSQL_DB:jdigital}
 spring.datasource.username=${MYSQL_USERNAME}
 spring.datasource.password=${MYSQL_PASSWORD}
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.data-locations=classpath:data_import.sql
 
 # API server
 server.servlet.contextPath=/api
