Change default user values in tests

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,2 +1,7 @@
 # Avoid SQL data insert in tests
 spring.sql.init.data-locations=
+
+# Default values
+user.default_job=test-job
+user.default_role=test-workman
+user.default_company=IT895623147
