--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 # Database
 spring.datasource.url = jdbc:mysql://${MYSQL_HOST:localhost}:3306/${MYSQL_DB:jdigital}
-spring.datasource.username=${MYSQL_USERNAME}
+spring.datasource.username=${MYSQL_USER}
 spring.datasource.password=${MYSQL_PASSWORD}
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
 spring.sql.init.data-locations=classpath:data_import.sql
 
 # API server
